# Fornax

./: .clang-format  .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  visualize.py
artifacts/: ARCHITECTURE.md  generate_frequency_power_plot.py  generate_latency_histogram.py
artifacts/perf/: cache_miss_comparison.txt  flamegraph_analysis.txt
include/: arch.h  config.h  controller.h  hypothesis_test.h  latency.h  numa.h  perf_counters.h  ring_buffer.h  shared_state.h  simd_math.h  statistics.h  thread_utils.h  workloads.h
results/: frequency_power.csv  latency_data.csv
scripts/: generate_data.py  generate_plots.sh  run_benchmark.sh
src/: latency.cpp  main.cpp  monitor.cpp  worker.cpp
tests/: CMakeLists.txt  test_controller.cpp  test_integration.cpp  test_ring_buffer.cpp  test_statistics.cpp  test_stress.cpp  test_workloads.cpp
